# BDD-Test-Framework

./: initial.md
api-test-framework/: .env.example  .gitignore  README.md  REVIEW.md  REVIEW_V2.md  conftest.py  pyproject.toml  pytest.ini
api-test-framework/.github/: copilot-instructions.md
api-test-framework/.github/prompts/: add-api-domain.prompt.md  add-event-test.prompt.md  add-scenario.prompt.md  modify-scenario.prompt.md  remove-scenario.prompt.md
api-test-framework/assertions/: __init__.py  api_assertions.py  messaging_assertions.py
api-test-framework/config/: __init__.py  endpoints.py  settings.py  version_registry.py
api-test-framework/core/: response_handler.py  retry.py
api-test-framework/core/auth/: __init__.py  api_key_auth.py  base_auth.py  bearer_auth.py  (+1 more)
api-test-framework/data/: __init__.py
api-test-framework/fixtures/: __init__.py  conftest_allure.py  conftest_auth.py  conftest_client.py  conftest_data.py  conftest_messaging.py
api-test-framework/models/: __init__.py  auth.py  base_model.py  user.py
api-test-framework/openapi/: v1.yaml  v2.yaml
api-test-framework/plugins/: allure_plugin.py  api_version_plugin.py  parallel_isolation.py  request_logger.py
api-test-framework/scripts/: generate_models.py  generate_report.sh  run_regression.sh  run_smoke.sh  run_tests.sh
api-test-framework/services/: __init__.py  auth_service.py  base_service.py  eventhub_service.py  kafka_service.py  user_service.py
api-test-framework/steps/: __init__.py  auth_steps.py  common_steps.py  event_steps.py  user_steps.py
api-test-framework/validators/: __init__.py  base_validator.py  composite_validator.py  pydantic_validator.py  schema_validator.py
(+44 files in other folders)
